[功能修改]       1.logo修改       2.登陆按钮修改方案1

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#eaeaea</color>
     <color name="colorPrimaryDark">#f0f0f0</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#ea5455</color>
 </resources>
