--- a/app/src/main/res/anim/start_logo_in.xml
+++ b/app/src/main/res/anim/start_logo_in.xml
@@ -5,6 +5,6 @@
         android:fromAlpha="0.0"
         android:toAlpha="1.0" />
     <translate
-        android:fromXDelta="50%p"
+        android:fromXDelta="250%"
         android:toXDelta="0" />
 </set>
