--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,14 +13,14 @@
         android:id="@+id/img_login_title"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="55dp"
         app:srcCompat="@drawable/logo_title" />
 
     <EditText
         android:id="@+id/edt_login_account"
         android:inputType="textEmailAddress"
         android:hint="@string/ch_edt_login_accout"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         style="@style/edt_login" />
 
     <EditText
@@ -31,11 +31,14 @@
         android:hint="@string/ch_edt_login_account"
         style="@style/edt_login" />
 
-    <ImageButton
-        android:id="@+id/imgBtn_login_ensure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/login_ensure_false"
+    <Button
+        android:id="@+id/btn_login_ensure"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="登  陆"
+        android:textColor="#eeffffff"
+        android:background="@drawable/btn_login"
+        android:textSize="20dp"
         android:layout_marginTop="45dp"
         android:enabled="false" />
 
