--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="30dp"
-    tools:context=".common.view.LoginActivity">
+    tools:context=".view.LoginActivity">
 
     <ImageView
         android:id="@+id/img_login_title"
@@ -17,7 +17,7 @@
         app:srcCompat="@drawable/logo_title" />
 
     <EditText
-        android:id="@+id/edt_login_account"
+        android:id="@+id/edt_login_username"
         style="@style/edt_login"
         android:layout_width="match_parent"
         android:layout_marginTop="40dp"
