--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:background">@drawable/bg_edt_login</item>
         <item name="android:gravity">center</item>
         <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
         <item name="android:paddingLeft">25dp</item>
         <item name="android:paddingRight">25dp</item>
         <item name="android:textSize">20dp</item>
@@ -26,6 +27,61 @@
         <item name="android:layout_weight">1</item>
         <item name="android:background">@null</item>
         <item name="android:stateListAnimator">@null</item>
+    </style>
+
+    <style name="edt_register_name">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:inputType">textPersonName</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:background">@drawable/bg_edt_normal</item>
+        <!--        <item name="android:backgroundTint">#d21818</item>-->
+    </style>
+
+    <style name="edt_register_input">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textSize">22dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:background">@drawable/bg_edt_normal</item>
+<!--                <item name="android:backgroundTint">#d21818</item>-->
+    </style>
+
+    <style name="txt_register_error">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#d21818</item>
+        <item name="android:textSize">13dp</item>
+        <item name="android:visibility">invisible</item>
+    </style>
+
+    <style name="txt_register_alter">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15dp</item>
+        <item name="android:padding">15dp</item>
+        <item name="android:layout_marginTop">26dp</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="btn_register">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_marginTop">50dp</item>
+        <item name="android:background">@drawable/btn_login_true</item>
+        <item name="android:enabled">true</item>
+        <item name="android:textColor">#eeffffff</item>
+        <item name="android:textSize">20dp</item>
     </style>
 
 </resources>
