[功能更新]   1.添加 重置密码界面交互   2.优化 更改登录失败三次以上提示语   3.优化 注册界面按钮交互

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:id="@+id/img_login_title"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
         app:srcCompat="@drawable/logo_title" />
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
-        android:background="@drawable/btn_login_false"
+        android:background="@drawable/btn_false"
         android:enabled="true"
         android:text="登  陆"
         android:textColor="#eeffffff"
